--- a/.github/workflows/web-deploy-on-release.yml
+++ b/.github/workflows/web-deploy-on-release.yml
@@ -13,21 +13,18 @@ jobs:
     name: Web Export
     runs-on: ubuntu-20.04
     container:
-      options: --user root
+      image: barichello/godot-ci:3.4.4
     steps:
-      - name: Godot Download
+      - name: Godot 4.0 Beta Download
         run: |
-          apt-get update && apt-get install -y --no-install-recommends git git-lfs unzip wget zip && rm -rf /var/lib/apt/lists/*
-          wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${GODOT_SUBDIR}/Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_linux_headless.64.zip
-          wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${GODOT_SUBDIR}/Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_export_templates.tpz
-          mkdir ~/.cache
-          mkdir -p ~/.config/godot
-          mkdir -p ~/.local/share/godot/templates/${GODOT_VERSION}.${GODOT_RELEASE_NAME}
-          unzip Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_linux_headless.64.zip
-          mv Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_linux_headless.64 /usr/local/bin/godot
-          unzip Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_export_templates.tpz
-          mv templates/* ~/.local/share/godot/templates/${GODOT_VERSION}.${GODOT_RELEASE_NAME}
-          rm -f Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_export_templates.tpz Godot_v${GODOT_VERSION}-${GODOT_RELEASE_NAME}_linux_headless.64.zip
+          wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${SUBDIR}/Godot_v${GODOT_VERSION}-${RELEASE_NAME}_linux_headless.64.zip
+          wget https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}${SUBDIR}/Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz
+          mkdir -p ~/.local/share/godot/templates/${GODOT_VERSION}.${RELEASE_NAME}
+          unzip Godot_v${GODOT_VERSION}-${RELEASE_NAME}_linux_headless.64.zip
+          mv Godot_v${GODOT_VERSION}-${RELEASE_NAME}_linux_headless.64 /usr/local/bin/godot
+          unzip Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz
+          mv templates/* ~/.local/share/godot/templates/${GODOT_VERSION}.${RELEASE_NAME}
+          rm -f Godot_v${GODOT_VERSION}-${RELEASE_NAME}_export_templates.tpz Godot_v${GODOT_VERSION}-${RELEASE_NAME}_linux_headless.64.zip
       - name: Checkout
         uses: actions/checkout@v3.3.0
         with:
